// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parentCandidates 1`] = `
<div>
  <IndexPatternSelect
    controlIndex={0}
    getIndexPattern={[Function]}
    getIndexPatterns={[Function]}
    indexPatternId="indexPattern1"
    onChange={[Function]}
  />
  <FieldSelect
    controlIndex={0}
    fieldName="keywordField"
    filterField={[Function]}
    getIndexPattern={[Function]}
    indexPatternId="indexPattern1"
    onChange={[Function]}
  />
  <EuiFormRow
    describedByIds={Array []}
    fullWidth={false}
    hasEmptyLabelSpace={false}
    helpText="Options are based on the value of parent control. Disabled if parent is not set."
    id="parentSelect-0"
    label="Parent control"
  >
    <EuiSelect
      compressed={false}
      fullWidth={false}
      hasNoInitialSelection={false}
      isLoading={false}
      onChange={[Function]}
      options={
        Array [
          Object {
            "text": "",
            "value": "",
          },
          Object {
            "text": "fieldA",
            "value": "1",
          },
          Object {
            "text": "fieldB",
            "value": "2",
          },
        ]
      }
    />
  </EuiFormRow>
  <EuiFormRow
    describedByIds={Array []}
    fullWidth={false}
    hasEmptyLabelSpace={false}
    id="multiselect-0"
  >
    <EuiSwitch
      checked={true}
      data-test-subj="listControlMultiselectInput"
      label="Multiselect"
      onChange={[Function]}
    />
  </EuiFormRow>
  <EuiFormRow
    describedByIds={Array []}
    fullWidth={false}
    hasEmptyLabelSpace={false}
    id="size-0"
    label="Size"
  >
    <EuiFieldNumber
      compressed={false}
      data-test-subj="listControlSizeInput"
      fullWidth={false}
      isLoading={false}
      min={1}
      onChange={[Function]}
      value={10}
    />
  </EuiFormRow>
</div>
`;

exports[`renders ListControlEditor 1`] = `
<div>
  <IndexPatternSelect
    controlIndex={0}
    getIndexPattern={[Function]}
    getIndexPatterns={[Function]}
    indexPatternId="indexPattern1"
    onChange={[Function]}
  />
  <FieldSelect
    controlIndex={0}
    fieldName="keywordField"
    filterField={[Function]}
    getIndexPattern={[Function]}
    indexPatternId="indexPattern1"
    onChange={[Function]}
  />
  <EuiFormRow
    describedByIds={Array []}
    fullWidth={false}
    hasEmptyLabelSpace={false}
    id="multiselect-0"
  >
    <EuiSwitch
      checked={true}
      data-test-subj="listControlMultiselectInput"
      label="Multiselect"
      onChange={[Function]}
    />
  </EuiFormRow>
  <EuiFormRow
    describedByIds={Array []}
    fullWidth={false}
    hasEmptyLabelSpace={false}
    id="size-0"
    label="Size"
  >
    <EuiFieldNumber
      compressed={false}
      data-test-subj="listControlSizeInput"
      fullWidth={false}
      isLoading={false}
      min={1}
      onChange={[Function]}
      value={10}
    />
  </EuiFormRow>
</div>
`;
